--- a/Android/app/src/main/res/layout/activity_photo.xml
+++ b/Android/app/src/main/res/layout/activity_photo.xml
@@ -20,8 +20,9 @@
 
         <LinearLayout
             android:id="@+id/title_layout"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="horizontal"
             tools:visibility="visible">
 
@@ -30,12 +31,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:fontFamily="@font/merienda"
+                android:padding="25sp"
+                android:drawableStart="@drawable/logo_no_text"
+                android:fontFamily="@font/bungee_shade"
+                android:gravity="center"
                 android:text="@string/title_text_view"
                 android:textColor="#303F9F"
                 android:textSize="45sp"
                 android:textStyle="bold"
-                android:drawableStart="@drawable/logo_no_text"
                 tools:text="@string/title" />
         </LinearLayout>
 
@@ -46,7 +49,7 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="217dp" />
+                android:layout_height="251dp" />
 
             <TextView
                 android:id="@+id/main_instruction"
@@ -79,11 +82,10 @@
             <ImageButton
                 android:id="@+id/camera_button"
                 android:layout_width="154dp"
-                android:layout_height="42dp"
+                android:layout_height="60dp"
                 android:background="@drawable/camera_button"
                 android:contentDescription="@string/camera_button_description"
-                android:scaleType="center"
-                app:srcCompat="@drawable/camera_button" />
+                android:scaleType="center" />
 
             <Space
                 android:layout_width="50dp"
@@ -92,11 +94,10 @@
             <ImageButton
                 android:id="@+id/gallery_button"
                 android:layout_width="154dp"
-                android:layout_height="42dp"
+                android:layout_height="62dp"
                 android:background="@drawable/galery_button"
                 android:contentDescription="@string/document_button_descriptio"
-                android:scaleType="center"
-                app:srcCompat="@drawable/galery_button" />
+                android:scaleType="center" />
 
             <Space
                 android:layout_width="25dp"
