--- a/Android/app/src/main/res/layout/acivity_caption.xml
+++ b/Android/app/src/main/res/layout/acivity_caption.xml
@@ -20,8 +20,8 @@
 
         <ImageButton
             android:id="@+id/back_button"
-            android:layout_width="123dp"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="48dp"
             android:background="@drawable/back_button"
             android:contentDescription="@string/general" />
 
@@ -37,35 +37,35 @@
                 android:padding="10sp">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/picture_image_view"
                     android:layout_width="match_parent"
-                    android:layout_height="527dp"
+                    android:layout_height="503dp"
                     android:contentDescription="@string/general"
                     tools:srcCompat="@tools:sample/avatars" />
             </FrameLayout>
 
             <ImageButton
-                android:id="@+id/imageButton2"
-                android:layout_width="242dp"
-                android:layout_height="44dp"
+                android:id="@+id/describe_button"
+                android:layout_width="198dp"
+                android:layout_height="48dp"
                 android:layout_gravity="center"
+                android:background="@drawable/decr_button"
                 android:contentDescription="@string/general"
-                app:srcCompat="@drawable/decr_button" />
+                android:scaleType="fitCenter" />
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10sp">
 
-                <EditText
-                    android:id="@+id/editText"
+                <TextView
+                    android:id="@+id/description_text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="66dp"
                     android:background="@drawable/white_gradient"
                     android:ems="10"
                     android:hint="@string/image_description_dummy"
                     android:importantForAutofill="no"
-                    android:inputType="textPersonName"
                     android:text="@string/picture_description"
                     android:textColor="#110C0C" />
             </FrameLayout>
