--- a/Android/app/src/main/res/values/preloaded_fonts.xml
+++ b/Android/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/arbutus</item>
+        <item>@font/audiowide</item>
+        <item>@font/bungee</item>
+        <item>@font/bungee_shade</item>
         <item>@font/marko_one</item>
         <item>@font/mclaren</item>
         <item>@font/merienda</item>
