--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -100,7 +100,7 @@
             android:padding="30sp" />
 
         <TextView
-            android:id="@+id/lnkRegister"
+            android:id="@+id/register_link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
